fix link jumpiness

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -188,6 +188,7 @@ section {
         width: 10em;
         margin-left: auto;
         margin-right: auto;
+        border-bottom: 1px solid transparent;
 
         &:hover {
             text-decoration: none;
